--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -305,8 +305,7 @@
 /* View Transition - Enable smooth theme toggle animations */
 ::view-transition-old(root),
 ::view-transition-new(root) {
-	animation-duration: 0.5s;
-	animation-timing-function: ease-out;
+	animation: none;
 	mix-blend-mode: normal;
 }
 
